--- a/index.css
+++ b/index.css
@@ -30,11 +30,11 @@ body {
   position: absolute;
   /*background-image: url(./wed-icon.png);
      background-size: contain;*/
-  background-color: white;
-  background: url();
+  /* background-color: white; */
+  /* background: url(); */
   padding: 20px;
   border-radius: 10px;
-  box-shadow: 0px 0px 15px rgba(131, 129, 129, 0.867);
+  box-shadow: 0px 0px 15px rgb(255, 252, 252);
   width: 300px;
   text-align: center;
 }
@@ -69,4 +69,7 @@ button {
 }
 #guest {
   background-color: gray;
+}
+#form-title{
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
